--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -143,6 +143,7 @@
   margin: 50px 0 0 0;
   justify-content: center;
   row-gap: 12px;
+  column-gap: 20px;
 }
 
 @media (min-width: 640px) {
@@ -161,17 +162,15 @@
   .device-type-list {
     margin: 50px 0 0 0;
     justify-content: center;
+    column-gap: 30px;
   }
 }
 
-.device-type-list__item {
-  margin-left: 20px;
-}
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .device-type-list__item:not(:first-child) {
     margin-left: 30px;
   }
-}
+} */
 
 .device-type-list__circle-image {
   display: flex;
