--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,6 +44,10 @@ const { shouldRenderSearchBar } = Astro.props;
       rel="stylesheet"
       href="https://unpkg.com/tippy.js@6/themes/light-border.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic"
+    />
 
     <script type="text/javascript" src="/scripts/jquery/jquery-1.10.2.min.js"
     ></script>
@@ -64,6 +68,8 @@ const { shouldRenderSearchBar } = Astro.props;
     <script type="text/javascript" src="https://unpkg.com/@popperjs/core@2"
     ></script>
     <script type="text/javascript" src="https://unpkg.com/tippy.js@6"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-js"
+    ></script>
     <script type="text/javascript" src="/scripts/main.js"></script>
     <!-- ${ self.javascript() } -->
 
