--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,4 @@
+@import url("./search.css");
 .landing-content {
   position: relative;
   padding: 0;
@@ -49,53 +50,18 @@
   }
 }
 
-.search-device__container {
+#homepage-autocomplete {
   margin: 24px 20px 0 20px;
-  padding: 16px 20px;
-  display: flex;
   height: 56px;
   background: var(--white);
-  border: 1px solid var(--gray-5);
-  box-sizing: border-box;
-  border-radius: 9px;
-  column-gap: 12px;
+  outline: none;
 }
 
 @media (min-width: 992px) {
-  .search-device__container {
+  #homepage-autocomplete {
     margin: 32px 0 0 calc(55vw + 20px);
-    padding: 16px 20px;
     max-width: 500px;
   }
-}
-
-.search-device__input {
-  flex: 1 1 0%;
-  border: none;
-  outline: none;
-  font-size: 18px;
-  max-width: 90%;
-  min-width: 0;
-}
-
-.search-device__input::placeholder {
-  color: var(--gray-3);
-  font-size: 14px;
-}
-
-.search-device__clear-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  flex: none;
-  background-color: white;
-  padding: 12px;
-  margin: -12px;
-}
-
-.search-device__clear-btn:focus {
-  outline: none;
 }
 
 .quick-device-list {
