--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,15 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import { Image } from "@astrojs/image/components";
 
 import { DEVICE_MANAGER } from "../scripts/deviceManager";
-import { getModelItems } from "../scripts/algolia/generate";
+import { getModelItems, getBrandItems } from "../scripts/algolia/generate";
 const modelItems = getModelItems(DEVICE_MANAGER);
+const brandItems = getBrandItems(DEVICE_MANAGER);
 ---
 
 <BaseLayout>
-  <script define:vars={{ modelItems }}>
+  <script define:vars={{ modelItems, brandItems }}>
     window.modelItems = modelItems;
+    window.brandItems = brandItems;
   </script>
   <script type="text/javascript" src="/scripts/home.js"></script>
   <div class="landing-content">
