--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -51,11 +51,22 @@ figure {
   right: 0;
   padding: 30px 20px;
   border-bottom: 1px solid var(--gray-5);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 4px 15px 0px #0000001a;
 }
 @media (min-width: 576px) {
   .header {
     padding: 15px 40px;
+  }
+}
+
+.header-transparent {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+@media (max-width: 680px) {
+  .header-transparent {
+    background-color: rgba(255, 255, 255, 1);
   }
 }
 
