--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -58,8 +58,8 @@
 /* Mobile */
 
 .aa-DetachedFormContainer {
-  height: 64px;
-  padding: 8px 4px;
+  /* height: 64px; */
+  padding: 16px 20px;
 }
 
 .aa-DetachedSearchButton {
@@ -87,4 +87,51 @@
     rgba(var(--aa-input-border-color-rgb), var(--aa-input-border-color-alpha));
   box-shadow: none;
   background-color: #e5e5e5;
+}
+
+@media (max-width: 680px) {
+  .aa-SubmitButton,
+  .aa-Label,
+  .aa-InputWrapperPrefix {
+    display: none;
+  }
+  .aa-DetachedFormContainer > .aa-DetachedCancelButton {
+    display: none;
+  }
+  .aa-Form > .aa-DetachedCancelButton {
+    height: 100%;
+    background-image: url("/Images/arrow-back.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    /* margin: 0 12px 0 12px; */
+    margin: 0;
+    padding: 0 12px;
+    width: 48px;
+  }
+  .aa-Form > .aa-DetachedCancelButton:hover {
+    border: none;
+    outline: none;
+  }
+  .aa-Form > .aa-DetachedCancelButton:active {
+    outline: none;
+    background-color: #e0e0e0;
+  }
+  .aa-Form {
+    overflow: hidden;
+  }
+
+  .cancelButton {
+    height: 100%;
+  }
+  /* .aa-InputWrapperPrefix > .aa-DetachedCancelButton {
+    height: 100%;
+  } */
+  .aa-InputWrapperSuffix {
+    width: 48px;
+  }
+  .aa-Form {
+    height: 50px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+  }
 }
