--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -70,6 +70,9 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
     <script type="text/javascript" src="https://unpkg.com/tippy.js@6"></script>
     <script src="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-js"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-plugin-recent-searches"
+    ></script>
     <script type="text/javascript" src="/scripts/main.js"></script>
     <!-- ${ self.javascript() } -->
 
