Update featured devices button styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,22 +26,22 @@ const brandItems = getBrandItems(DEVICE_MANAGER);
     </header>
     <div id="homepage-autocomplete"></div>
     <ul class="quick-device-list">
-      <li class="quick-device-list__item quick-device-list__item-iphone">
+      <li class="quick-device-list__item quick-device-list__item__light-blue">
         <a
-          class="quick-device-list__link quick-device-list__link-iphone"
-          href="/device/apple-iphone14-blue">iPhone 14</a
+          class="quick-device-list__link quick-device-list__link__light-blue"
+          href="/model/iphone-14">iPhone 14</a
         >
       </li>
-      <li class="quick-device-list__item quick-device-list__item-googlepixel">
+      <li class="quick-device-list__item quick-device-list__item__light-blue">
         <a
-          class="quick-device-list__link quick-device-list__link-googlepixel"
-          href="/device/google-pixel5-justblack">Google Pixel 5</a
+          class="quick-device-list__link quick-device-list__link__light-blue"
+          href="/model/google-pixel-5">Google Pixel 5</a
         >
       </li>
-      <li class="quick-device-list__item quick-device-list__item-other">
+      <li class="quick-device-list__item quick-device-list__item__deep-blue">
         <a
-          class="quick-device-list__link quick-device-list__link-other"
-          href="/type/laptop">Other laptop, phones, tablets & wearables.</a
+          class="quick-device-list__link quick-device-list__link__deep-blue"
+          href="/type/all">All Devices</a
         >
       </li>
     </ul>
