Fix color description not updated

--- a/src/pages/model/[model].astro
+++ b/src/pages/model/[model].astro
@@ -165,6 +165,7 @@ const defaultColorId = deviceDetail.color?.id ?? "default";
                           type="button"
                           data-tippy-content={d.color.name}
                           data-color-id={d.color.id}
+                          data-color-name={d.color.name}
                           data-image-path-portrait={d.imagePath?.[0]?.[0]}
                           data-image-path-landscape={d.imagePath?.[1]?.[0]}
                           data-credits={d.credits}
