Fix model links in device list page

--- a/src/pages/type/[type].astro
+++ b/src/pages/type/[type].astro
@@ -227,7 +227,7 @@ const brandList: Array<BrandEnum | "all"> = ["all", ...nonEmptyBrands];
                         >
                           <a
                             class="device-grid__link"
-                            href={"/device/" + thumbnail.device.device_id}
+                            href={"/model/" + thumbnail.modelId}
                           >
                             {thumbnail.device.imagePath?.map(
                               (image: [string, string], index: number) => {
