Update skymakers url as skymakers.digital

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -113,7 +113,7 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
         <div class="header__logo-group">
           <a
             class="header__skymaker-logo-link"
-            href="https://www.skymakers.co.uk/?utm_medium=web&utm_source=mockuphone"
+            href="https://www.skymakers.digital/?utm_medium=web&utm_source=mockuphone"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -192,7 +192,7 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
       <footer class="footer">
         <div class="footer__lg-left">
           <a
-            href="https://www.skymakers.co.uk/?utm_medium=web&utm_source=mockuphone"
+            href="https://www.skymakers.digital/?utm_medium=web&utm_source=mockuphone"
             target="_blank"
             rel="noopener noreferrer"
           >
