Add all device arrow

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,8 +40,12 @@ const brandItems = getBrandItems(DEVICE_MANAGER);
       </li>
       <li class="quick-device-list__item quick-device-list__item__deep-blue">
         <a
-          class="quick-device-list__link quick-device-list__link__deep-blue"
-          href="/type/all">All Devices</a
+          class="quick-device-list__link quick-device-list__link__deep-blue quick-device-list__all-device"
+          href="/type/all"
+          ><span>All Devices</span><img
+            src="/Images/all-device-arrow.svg"
+            alt="all-device-arrow.svg"
+          /></a
         >
       </li>
     </ul>
