Update quick device links

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -159,6 +159,7 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
           <div class="header__share-default d-none d-sm-block">
             <a
               href="https://www.facebook.com/sharer/sharer.php?u=https://mockuphone.com"
+              class="header__share-facebook-link"
               rel="noreferrer"
               target="_blank"
             >
@@ -172,6 +173,7 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
             </a>
             <a
               href="https://x.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
+              class="header__share-twitter-link"
             >
               <Image
                 class="header__share-twitter"
