--- a/src/components/RequestDeviceCard/requestDeviceCard.css
+++ b/src/components/RequestDeviceCard/requestDeviceCard.css
@@ -4,18 +4,17 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  /* height: 295px; */
   background: var(--white);
   border: 1px solid var(--gray-5);
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
   border-radius: 10px;
-  padding: 40px 56px;
+  padding: 56px 40px;
 }
 @media (min-width: 992px) {
   .request-device-section {
     width: 100%;
-    /* height: 295px; */
+    padding: 60px 200px;
   }
 }
 
@@ -23,8 +22,6 @@
   display: block;
   width: 190px;
   height: auto;
-}
-@media (min-width: 680px) {
 }
 
 .request-device-section__desc {
@@ -45,32 +42,6 @@
   display: none;
 }
 
-@media (min-width: 680px) {
-  .request-device-section__image {
-    width: 194px;
-  }
-
-  .request-device-section__desc {
-    font-size: 37px;
-    font-weight: 700;
-    line-height: 58px;
-  }
-
-  .request-device-section__request-btn {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 25px;
-  }
-
-  .request-device-section__image--tall {
-    display: block;
-  }
-
-  .request-device-section__image--flat {
-    display: none;
-  }
-}
-
 .request-device-section__request-link {
   display: block;
   margin: 10px 0 0 0;
@@ -86,8 +57,35 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 22px;
+  min-width: max-content;
 }
 
 .request-device-section__request-btn:hover {
   cursor: pointer;
+}
+
+@media (min-width: 680px) {
+  .request-device-section__image {
+    width: 194px;
+  }
+
+  .request-device-section__desc {
+    font-size: 37px;
+    font-weight: 700;
+    line-height: 58px;
+  }
+
+  .request-device-section__request-btn {
+    font-size: 16px;
+    line-height: 25px;
+    padding: 16px 20px;
+  }
+
+  .request-device-section__image--tall {
+    display: block;
+  }
+
+  .request-device-section__image--flat {
+    display: none;
+  }
 }
