--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -1,4 +1,3 @@
-
 main {
   background: #f0f0f0;
 }
@@ -690,14 +689,22 @@ main {
 }
 
 .request-device-section {
-  width: 100% !important;
-  padding: 40px 56px !important;
+  margin: 0 20px 20px 20px;
+  min-width: none !important;
+  width: auto !important;
+  /* width: 100% !important; */
+  padding: 56px 40px !important;
 }
+@media (min-width: 992px) {
+  .request-device-section {
+    margin: 0;
+  }
+}
+
 @media (min-width: 992px) {
   .request-device-section {
     width: 100%;
     padding: 60px 200px;
-
   }
 }
 
@@ -708,7 +715,7 @@ main {
 }
 
 .request-device-section__desc {
-  margin: 20px 0 0 0 !important; 
+  margin: 20px 0 0 0 !important;
   font-size: 14px !important;
   font-weight: 700 !important;
   line-height: 22px !important;
