Change landing page featured devices

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,13 +29,13 @@ const brandItems = getBrandItems(DEVICE_MANAGER);
       <li class="quick-device-list__item quick-device-list__item__light-blue">
         <a
           class="quick-device-list__link quick-device-list__link__light-blue"
-          href="/model/iphone-15-pro">iPhone 15 Pro</a
+          href="/model/iphone-15">iPhone 15</a
         >
       </li>
       <li class="quick-device-list__item quick-device-list__item__light-blue">
         <a
           class="quick-device-list__link quick-device-list__link__light-blue"
-          href="/model/google-pixel-8-pro">Google Pixel 8 Pro</a
+          href="/model/galaxy-s24-ultra">Samsung Galaxy S24 Ultra</a
         >
       </li>
       <li class="quick-device-list__item quick-device-list__item__deep-blue">
